fixed search container being slightly misaligned

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -26,7 +26,7 @@ body {
 }
 
 .content-body {
-	margin: 10px;
+	margin-top: 10px;
 }
 
 table,
